fix: align thread border colors with the color scheme

--- a/virtual-event/src/styles/Chat/Thread/Thread.theme.scss
+++ b/virtual-event/src/styles/Chat/Thread/Thread.theme.scss
@@ -1,3 +1,8 @@
+.str-chat {
+  --str-chat__thread-head-start-border-block-end-color: var(--stroke);
+  --str-chat__thread-border-inline-start: 1px solid var(--stroke);
+}
+
 .str-chat__thread {
   .channel-header-actions-button {
     opacity: 0;
